busybox/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    role: busybox
spec:
  containers:
  - name: busybox
    image: busybox:1.28.4
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
