busybox/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: busybox
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.250.88.0/24
#        except:
#        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: default
    - podSelector:
        matchLabels:
          role: busybox
    ports:
    - protocol: UDP
  egress:
  - to:
    - ipBlock:
        cidr: 10.250.0.0/16
        except:
        - 10.250.112.47/3
    ports:
    - protocol: TCP
